Per Jason's request, pushing an update to my branch with a swipe screen and a floating app button. -- Brennen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="brennen.messageinabottle.MainActivity" />
         </activity>
+        <activity
+            android:name=".Inventory"
+            android:label="@string/title_activity_inventory"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="brennen.messageinabottle.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
