--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.jhernandez5922.messageinabottle" >
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <!-- PERMISSIONS !-->
+    <permission android:name="com.gmail.jhernandez5922.messageinabottle.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.gmail.jhernandez5922.messageinabottle.permission.MAPS_RECEIVE" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- END PERMISSIONS !-->
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <meta-data
+            android:name= "com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <uses-library android:name="com.google.android.maps"/>
+
         <activity
             android:name=".LogInActivity"
             android:label="@string/app_name" >
@@ -27,3 +54,4 @@
     </application>
 
 </manifest>
+
