--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,35 +6,34 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <!-- PERMISSIONS !-->
-    <permission android:name="com.yarmatey.messageinabottle.permission.MAPS_RECEIVE"
+    <!-- PERMISSIONS ! -->
+    <permission
+        android:name="com.yarmatey.messageinabottle.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.yarmatey.messageinabottle.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- END PERMISSIONS !-->
 
-
+    <!-- END PERMISSIONS ! -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <meta-data
-            android:name= "com.google.android.gms.version"
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <uses-library android:name="com.google.android.maps"/>
+        <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name="com.yarmatey.messageinabottle.LogInActivity"
+            android:name=".LogInActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,14 +42,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.yarmatey.messageinabottle.MessageActivity"
+            android:name=".MessageActivity"
             android:label="@string/title_activity_message"
-            android:parentActivityName="com.yarmatey.messageinabottle.LogInActivity" >
+            android:parentActivityName=".Inventory">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yarmatey.messageinabottle.LogInActivity" />
+                android:value="com.yarmatey.messageinabottle.Inventory" />
+        </activity>
+        <activity
+            android:name=".Inventory"
+            android:label="@string/title_activity_inventory"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
 </manifest>
-
