--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <!-- END PERMISSIONS ! -->
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pirate_hat"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
