Settings menu integrated and accessible. Time to begin creating the settings we want to have on the app. Also removed access to the settings menu from the login screen.
To add the option to connect to settings, make sure that:
   1: res/menu_activityname.xml has an action_settings item.
      If you do not want to enable access, remove this item.
   2: Inside the @Override onOptionsItemSelected, you will need to retrieve
      the id of the item clicked with int id = item.getItemId();
      Then you will need to handle it with some form of interrupt vector table
   3: Recommend
	Intent intent = new Intent(getApplicationContext(), SettingsActivity.class);
	startActivity(intent);
	return true;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
 
     <!-- END PERMISSIONS ! -->
     <application
+        android:name=".MessageInABottle"
         android:allowBackup="true"
         android:icon="@drawable/pirate_hat"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".MessageInABottle">
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -46,7 +46,7 @@
         <activity
             android:name=".MessageActivity"
             android:label="@string/title_activity_message"
-            android:parentActivityName=".Inventory">
+            android:parentActivityName=".Inventory" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yarmatey.messageinabottle.Inventory" />
@@ -54,7 +54,15 @@
         <activity
             android:name=".Inventory"
             android:label="@string/title_activity_inventory"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".Inventory" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.yarmatey.messageinabottle.Inventory" />
         </activity>
     </application>
 
