--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".MessageInABottle">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -45,7 +46,7 @@
         <activity
             android:name=".MessageActivity"
             android:label="@string/title_activity_message"
-            android:parentActivityName=".Inventory">
+            android:parentActivityName=".Inventory" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yarmatey.messageinabottle.Inventory" />
@@ -53,7 +54,11 @@
         <activity
             android:name=".Inventory"
             android:label="@string/title_activity_inventory"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
     </application>
 
