--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,20 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- END PERMISSIONS ! -->
+    <!--
+     To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
+     option is required to comply with the Google+ Sign-In developer policies
+    -->
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> <!-- To retrieve the account name (email) as part of sign-in: -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- END PERMISSIONS ! -->
     <application
+        android:name=".MessageInABottle"
         android:allowBackup="true"
-        android:icon="@drawable/pirate_hat"
+        android:icon="@drawable/pirate_hat_color"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".MessageInABottle">
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -35,7 +42,7 @@
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name=".LogInActivity"
+            android:name=".login.LogInActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,21 +51,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MessageActivity"
+            android:name=".message.MessageActivity"
             android:label="@string/title_activity_message"
-            android:parentActivityName=".Inventory"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".inventory.Inventory"
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.yarmatey.messageinabottle.Inventory" />
+                android:value=".inventory.Inventory" />
         </activity>
         <activity
-            android:name=".Inventory"
+            android:name=".inventory.Inventory"
             android:label="@string/title_activity_inventory"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".login.RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
     </application>
