Added Google Map and RecyclerView to second tab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:name=".message.MessageActivity"
             android:label="@string/title_activity_message"
             android:parentActivityName=".inventory.Inventory"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
