New branch for testing for lack of GPS enabled. It works to check, but there is a problem: 	If we got to the new intent to tell the user to enable the setting, 	there is not a way to easily check (inside our code yet at least) 	whether the user has enabled it when we get back. 	I tried onResume, but that lead to seizures on the phone when placed 	in the SplashScreen. Looking for ideas. Until then, other homework!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yarmatey.messageinabottle" >
+    package="com.yarmatey.messageinabottle">
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -23,7 +23,7 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -39,20 +39,19 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login.LogInActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".message.MessageActivity"
             android:label="@string/title_activity_message"
             android:parentActivityName=".inventory.Inventory"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".inventory.Inventory" />
@@ -60,20 +59,19 @@
         <activity
             android:name=".inventory.Inventory"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".inventory.Inventory" >
+            android:parentActivityName=".inventory.Inventory">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.yarmatey.messageinabottle.inventory.Inventory" />
         </activity>
         <activity
             android:name=".login.RegisterActivity"
-            android:label="@string/title_activity_register" >
-        </activity>
+            android:label="@string/title_activity_register"></activity>
+        <activity android:name=".noLocation"></activity>
     </application>
 
 </manifest>
