--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         </activity>
         <activity
             android:name=".login.LogInActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".message.MessageActivity"
             android:label="@string/title_activity_message"
@@ -59,7 +60,7 @@
         <activity
             android:name=".inventory.Inventory"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -70,8 +71,8 @@
         </activity>
         <activity
             android:name=".login.RegisterActivity"
-            android:label="@string/title_activity_register"></activity>
-        <activity android:name=".settings.noLocation"></activity>
+            android:label="@string/title_activity_register"/>
+        <activity android:name=".settings.noLocation"/>
     </application>
 
 </manifest>
